update a loop functions

--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "getdata",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
-  "author": "MiaoS",
+  "main": "fetchData.js",
   "dependencies": {
-    "fs": "0.0.1-security",
     "mongoose": "^4.9.0",
     "request": "^2.81.0",
     "request-promise": "^4.2.0"
